envio de correo exitoso

--- a/machete/.gitignore
+++ b/machete/.gitignore
@@ -31,3 +31,30 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Ignorar archivos de configuración con datos sensibles
+src/main/resources/application.properties
+src/main/resources/application.yml
+
+# Ignorar archivos de configuración para entornos específicos
+src/main/resources/application-dev.properties
+src/main/resources/application-prod.properties
+src/main/resources/application-test.properties
+
+# Ignorar archivos de configuración generales
+src/main/resources/*.properties
+src/main/resources/*.yml
+
+# Ignorar archivos de log
+logs/
+*.log
+
+# Ignorar archivos de compilación y dependencias
+target/
+*.jar
+*.war
+*.ear
+.mvn/
+.gradle/
+build/
+
