--- a/machete/src/main/resources/application.properties
+++ b/machete/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=Machete
 # Configuracion de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/machete
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/machete
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Configuracion de Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Opcional: Configuracion de la consola de H2
 spring.h2.console.enabled=false
 spring.jpa.show-sql = true
@@ -26,10 +26,10 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=3000
 spring.mail.properties.mail.smtp.writetimeout=5000
-#spring.datasource.url=jdbc:h2:mem:TEST;DB_CLOSE_DELAY=-1;
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.platform=h2
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:mem:TEST;DB_CLOSE_DELAY=-1;
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.platform=h2
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
